--- a/ANSv4/Catalogo4/Properties/Settings.settings
+++ b/ANSv4/Catalogo4/Properties/Settings.settings
@@ -8,5 +8,35 @@
     <Setting Name="Catalogo_VerExistenciaWS_VerExistencia" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://190.3.78.12/wsOracle/VerExistencia.asmx</Value>
     </Setting>
+    <Setting Name="Catalogo_UpdateClientesWS_UpdateClientes" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/UpdateClientes.asmx</Value>
+    </Setting>
+    <Setting Name="Catalogo_AppConfigWS_appConfig" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/appConfig.asmx</Value>
+    </Setting>
+    <Setting Name="Catalogo_LLaveClienteWS_LLaveCliente" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/LLaveCliente.asmx</Value>
+    </Setting>
+    <Setting Name="Catalogo_AuditWS_audit_v_304" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/audit_v_304.asmx</Value>
+    </Setting>
+    <Setting Name="Catalogo_ClientesNovedadesWs_ClientesNovedades" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/ClientesNovedades.asmx</Value>
+    </Setting>
+    <Setting Name="Catalogo_DevolucionWS_Devolucion" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/Devolucion.asmx</Value>
+    </Setting>
+    <Setting Name="Catalogo_InterDepositoWS_InterDeposito" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/InterDeposito.asmx</Value>
+    </Setting>
+    <Setting Name="Catalogo_PedidosWS_Pedidos" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/Pedidos.asmx</Value>
+    </Setting>
+    <Setting Name="Catalogo_RecibosWS_Recibos_v_303" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/Recibos_v_303.asmx</Value>
+    </Setting>
+    <Setting Name="Catalogo_RendicionWS_Rendicion" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://190.3.78.12/wsCatalogo3/Rendicion.asmx</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
