--- a/ANSv4/Catalogo4/app.config
+++ b/ANSv4/Catalogo4/app.config
@@ -13,6 +13,37 @@
             <setting name="Catalogo_VerExistenciaWS_VerExistencia" serializeAs="String">
                 <value>http://190.3.78.12/wsOracle/VerExistencia.asmx</value>
             </setting>
+            <setting name="Catalogo_UpdateClientesWS_UpdateClientes" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/UpdateClientes.asmx</value>
+            </setting>
+            <setting name="Catalogo_AppConfigWS_appConfig" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/appConfig.asmx</value>
+            </setting>
+            <setting name="Catalogo_LLaveClienteWS_LLaveCliente" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/LLaveCliente.asmx</value>
+            </setting>
+            <setting name="Catalogo_AuditWS_audit_v_304" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/audit_v_304.asmx</value>
+            </setting>
+            <setting name="Catalogo_ClientesNovedadesWs_ClientesNovedades"
+                serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/ClientesNovedades.asmx</value>
+            </setting>
+            <setting name="Catalogo_DevolucionWS_Devolucion" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/Devolucion.asmx</value>
+            </setting>
+            <setting name="Catalogo_InterDepositoWS_InterDeposito" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/InterDeposito.asmx</value>
+            </setting>
+            <setting name="Catalogo_PedidosWS_Pedidos" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/Pedidos.asmx</value>
+            </setting>
+            <setting name="Catalogo_RecibosWS_Recibos_v_303" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/Recibos_v_303.asmx</value>
+            </setting>
+            <setting name="Catalogo_RendicionWS_Rendicion" serializeAs="String">
+                <value>http://190.3.78.12/wsCatalogo3/Rendicion.asmx</value>
+            </setting>
         </Catalogo.Properties.Settings>
     </applicationSettings>
 </configuration>
