--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -13,6 +13,25 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
+    <PublishUrl>publicar\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ProductName>Catálogo Dígital de Productos v4.0</ProductName>
+    <PublisherName>Auto Náutica Sur s.r.l.</PublisherName>
+    <SuiteName>Catálogo ANS</SuiteName>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>4.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <CreateDesktopShortcut>true</CreateDesktopShortcut>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -35,6 +54,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Catalogo.App</StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>LOGO-ANS-48X48.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
@@ -96,9 +118,27 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
+    <Compile Include="_devoluciones\ucDevolucion.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="_devoluciones\ucDevolucion.Designer.cs">
+      <DependentUpon>ucDevolucion.cs</DependentUpon>
+    </Compile>
     <Compile Include="_existencia\VerExistencia.cs" />
+    <Compile Include="_pedidos\ucPedido.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="_pedidos\ucPedido.Designer.cs">
+      <DependentUpon>ucPedido.cs</DependentUpon>
+    </Compile>
     <Compile Include="_pedidos\vtadev.xaml.cs">
       <DependentUpon>vtadev.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="_recibos\fRecibo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="_recibos\fRecibo.Designer.cs">
+      <DependentUpon>fRecibo.cs</DependentUpon>
     </Compile>
     <Compile Include="_registro\Registration.xaml.cs">
       <SubType>Code</SubType>
@@ -215,6 +255,15 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="_devoluciones\ucDevolucion.resx">
+      <DependentUpon>ucDevolucion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="_pedidos\ucPedido.resx">
+      <DependentUpon>ucPedido.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="_recibos\fRecibo.resx">
+      <DependentUpon>fRecibo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="_updateData\fDataUpdate.resx">
       <DependentUpon>fDataUpdate.cs</DependentUpon>
     </EmbeddedResource>
@@ -327,6 +376,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="recursos\Nuevo-logo-Auto-nautica-rojo-y-blanco.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="_recibos\xxxRecibos1.vb.jpb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="LOGO-ANS-48X48.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
