--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -47,6 +47,7 @@
     <Reference Include="AvalonDock.Themes">
       <HintPath>..\..\_Recursos\lib\AvalonDock_DLLs_NET35\AvalonDock.Themes.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="PresentationUI, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="ReachFramework" />
     <Reference Include="System" />
@@ -68,7 +69,6 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsFormsIntegration" />
-    <Reference Include="WPFToolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -156,6 +156,8 @@
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
     <Compile Include="_application\UpdateAppConfig.cs" />
+    <Compile Include="_pedidos\Pedido.cs" />
+    <Compile Include="_pedidos\PedidoItem.cs" />
     <Compile Include="_registro\ActivarAplicacion.cs" />
     <Compile Include="_auditor\EnvioAuditoria.cs" />
     <Compile Include="_clientes\UpdateClientes.cs" />
