--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -158,6 +158,10 @@
     <Compile Include="_application\UpdateAppConfig.cs" />
     <Compile Include="_pedidos\Pedido.cs" />
     <Compile Include="_pedidos\PedidoItem.cs" />
+    <Compile Include="_recibos\AplicacionItem.cs" />
+    <Compile Include="_recibos\DeducirItem.cs" />
+    <Compile Include="_recibos\Recibo.cs" />
+    <Compile Include="_recibos\ReciboItem.cs" />
     <Compile Include="_registro\ActivarAplicacion.cs" />
     <Compile Include="_auditor\EnvioAuditoria.cs" />
     <Compile Include="_clientes\UpdateClientes.cs" />
@@ -446,10 +450,10 @@
     <WebReferences Include="Web References\" />
   </ItemGroup>
   <ItemGroup>
-    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo3/appConfig.asmx%3fwsdl">
+    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo4/appConfig.asmx%3fwsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
       <RelPath>Web References\AppConfigWS\</RelPath>
-      <UpdateFromURL>http://190.3.78.12/wsCatalogo3/appConfig.asmx%3fwsdl</UpdateFromURL>
+      <UpdateFromURL>http://190.3.78.12/wsCatalogo4/appConfig.asmx%3fwsdl</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
@@ -457,10 +461,10 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>Catalogo_AppConfigWS_appConfig</CachedSettingsPropName>
     </WebReferenceUrl>
-    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo3/audit_v_304.asmx%3fwsdl">
+    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo4/audit_v_304.asmx%3fwsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
       <RelPath>Web References\AuditWS\</RelPath>
-      <UpdateFromURL>http://190.3.78.12/wsCatalogo3/audit_v_304.asmx%3fwsdl</UpdateFromURL>
+      <UpdateFromURL>http://190.3.78.12/wsCatalogo4/audit_v_304.asmx%3fwsdl</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
@@ -468,10 +472,10 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>Catalogo_AuditWS_audit_v_304</CachedSettingsPropName>
     </WebReferenceUrl>
-    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo3/ClientesNovedades.asmx%3fwsdl">
+    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo4/ClientesNovedades.asmx%3fwsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
       <RelPath>Web References\ClientesNovedadesWs\</RelPath>
-      <UpdateFromURL>http://190.3.78.12/wsCatalogo3/ClientesNovedades.asmx%3fwsdl</UpdateFromURL>
+      <UpdateFromURL>http://190.3.78.12/wsCatalogo4/ClientesNovedades.asmx%3fwsdl</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
@@ -479,10 +483,10 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>Catalogo_ClientesNovedadesWs_ClientesNovedades</CachedSettingsPropName>
     </WebReferenceUrl>
-    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo3/Devolucion.asmx%3fwsdl">
+    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo4/Devolucion.asmx%3fwsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
       <RelPath>Web References\DevolucionWS\</RelPath>
-      <UpdateFromURL>http://190.3.78.12/wsCatalogo3/Devolucion.asmx%3fwsdl</UpdateFromURL>
+      <UpdateFromURL>http://190.3.78.12/wsCatalogo4/Devolucion.asmx%3fwsdl</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
@@ -490,10 +494,10 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>Catalogo_DevolucionWS_Devolucion</CachedSettingsPropName>
     </WebReferenceUrl>
-    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo3/InterDeposito.asmx%3fwsdl">
+    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo4/InterDeposito.asmx%3fwsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
       <RelPath>Web References\InterDepositoWS\</RelPath>
-      <UpdateFromURL>http://190.3.78.12/wsCatalogo3/InterDeposito.asmx%3fwsdl</UpdateFromURL>
+      <UpdateFromURL>http://190.3.78.12/wsCatalogo4/InterDeposito.asmx%3fwsdl</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
@@ -501,10 +505,10 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>Catalogo_InterDepositoWS_InterDeposito</CachedSettingsPropName>
     </WebReferenceUrl>
-    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo3/LLaveCliente.asmx%3fwsdl">
+    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo4/LLaveCliente.asmx%3fwsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
       <RelPath>Web References\LLaveClienteWS\</RelPath>
-      <UpdateFromURL>http://190.3.78.12/wsCatalogo3/LLaveCliente.asmx%3fwsdl</UpdateFromURL>
+      <UpdateFromURL>http://190.3.78.12/wsCatalogo4/LLaveCliente.asmx%3fwsdl</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
@@ -512,10 +516,10 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>Catalogo_LLaveClienteWS_LLaveCliente</CachedSettingsPropName>
     </WebReferenceUrl>
-    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo3/Pedidos.asmx%3fwsdl">
+    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo4/Pedidos.asmx%3fwsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
       <RelPath>Web References\PedidosWS\</RelPath>
-      <UpdateFromURL>http://190.3.78.12/wsCatalogo3/Pedidos.asmx%3fwsdl</UpdateFromURL>
+      <UpdateFromURL>http://190.3.78.12/wsCatalogo4/Pedidos.asmx%3fwsdl</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
@@ -523,10 +527,10 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>Catalogo_PedidosWS_Pedidos</CachedSettingsPropName>
     </WebReferenceUrl>
-    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo3/Recibos_v_303.asmx%3fwsdl">
+    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo4/Recibos_v_303.asmx%3fwsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
       <RelPath>Web References\RecibosWS\</RelPath>
-      <UpdateFromURL>http://190.3.78.12/wsCatalogo3/Recibos_v_303.asmx%3fwsdl</UpdateFromURL>
+      <UpdateFromURL>http://190.3.78.12/wsCatalogo4/Recibos_v_303.asmx%3fwsdl</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
@@ -534,10 +538,10 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>Catalogo_RecibosWS_Recibos_v_303</CachedSettingsPropName>
     </WebReferenceUrl>
-    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo3/Rendicion.asmx%3fwsdl">
+    <WebReferenceUrl Include="http://190.3.78.12/wsCatalogo4/Rendicion.asmx%3fwsdl">
       <UrlBehavior>Dynamic</UrlBehavior>
       <RelPath>Web References\RendicionWS\</RelPath>
-      <UpdateFromURL>http://190.3.78.12/wsCatalogo3/Rendicion.asmx%3fwsdl</UpdateFromURL>
+      <UpdateFromURL>http://190.3.78.12/wsCatalogo4/Rendicion.asmx%3fwsdl</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
