--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -66,7 +66,7 @@
       <HintPath>..\..\_Recursos\lib\AvalonDock_DLLs_NET35\AvalonDock.Themes.dll</HintPath>
     </Reference>
     <Reference Include="AxInterop.ShockwaveFlashObjects">
-      <HintPath>..\..\..\..\..\Users\pablo\Downloads\snaPorting-master (1)\snaPorting-master\ANSv4\Catalogo4\obj\Debug\AxInterop.ShockwaveFlashObjects.dll</HintPath>
+      <HintPath>..\..\_Recursos\AxInterop.ShockwaveFlashObjects.dll</HintPath>
     </Reference>
     <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
@@ -95,6 +95,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsFormsIntegration" />
+    <Reference Include="WPFToolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -152,6 +153,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="util\BackgroundTasks\BackgroundTaskBase.cs" />
+    <Compile Include="util\emitter-receiver\ICancellableEmitter.cs" />
     <Compile Include="util\errorHandling\ErrorHandler.cs">
       <SubType>Form</SubType>
     </Compile>
