--- a/ANSv4/Catalogo4/Catalogo4.csproj
+++ b/ANSv4/Catalogo4/Catalogo4.csproj
@@ -299,6 +299,12 @@
     <Compile Include="util\BackgroundReader\BackgroundDataLoader.cs" />
     <Compile Include="_registro\AppRegistro.cs" />
     <Compile Include="_rendiciones\EnvioRendicion.cs" />
+    <Compile Include="_rendiciones\fPruebas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="_rendiciones\fPruebas.designer.cs">
+      <DependentUpon>fPruebas.cs</DependentUpon>
+    </Compile>
     <Compile Include="_rendiciones\ucRendiciones.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -426,6 +432,9 @@
       <DependentUpon>ucPedido.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="_productos\FiltroSearch.resx" />
+    <EmbeddedResource Include="_rendiciones\fPruebas.resx">
+      <DependentUpon>fPruebas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="_rendiciones\ucRendiciones.resx">
       <DependentUpon>ucRendiciones.cs</DependentUpon>
     </EmbeddedResource>
